# flask-firebase-admin

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: lint.yaml  publish.yaml  test.yaml  type-check.yaml
flask_firebase_admin/: __init__.py  flask_firebase_admin.py  status_codes.py
tests/: conftest.py  flask_firebase_admin_test.py  test_flask_firebase_admin.py
