[tool.poetry]
name = "flask-firebase-admin"
version = "0.1.0"
description = "Firebase for Flask"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0.0"
firebase-admin = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pylint = "^2.5.3"
reorder-python-imports = "^2.3.5"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
