[tool.poetry]
name = "flask-firebase-admin"
version = "0.2.2"
description = "Firebase for Flask"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/andrewrosss/flask-firebase-admin"
# repository = "https://github.com/andrewrosss/flask-firebase-admin"
# documentation = "https://github.com/andrewrosss/flask-firebase-admin"

keywords = ["flask", "firebase", "admin", "auth"]

classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: Flask",
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0.0"
firebase-admin = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pylint = "^2.5.3"
reorder-python-imports = "^2.3.5"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
